--- a/cloth_prediction.ipynb
+++ b/cloth_prediction.ipynb
@@ -1062,24 +1062,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "4ca704bf",
-   "metadata": {
-    "id": "4ca704bf"
-   },
+   "execution_count": null,
+   "id": "12f8d3b1",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import gzip\n",
+    "import numpy as np\n",
     "\n",
-    "# Assuming 'model' is your trained model\n",
-    "with open('model.pkl', 'wb') as file:\n",
-    "    pickle.dump(rf, file)\n"
+    "with gzip.open('model.pkl.gz', 'wb') as f:\n",
+    "    pickle.dump(rf, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e15476a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with gzip.open('model.pkl.gz', 'rb') as f:\n",
+    "    model = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e15476a3",
+   "id": "f068b2ce",
    "metadata": {},
    "outputs": [],
    "source": []
